src/test/deca/context/invalid/obj/declfield/test_init_incompatible_class.deca
// Description:
//    initialisation incompatible car B soustype de A et pas l'inverse
//
// Resultats:
//  Ligne 20 : Les deux types ne sont pas compatibles
//
// Historique:
//    cree le 01/01/2024



class A {

}
class B extends A{

}
class C {
    A a;
    B b = a ;

}
